--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<title>Citrus Heights Dance Academy — A Studio With A Family Atmosphere</title>
 
 	<meta name="description" content="Citrus Heights Dance Academy is a dance studio located at Sylvan Corners in Citrus Heights, CA. We offer beginning to advanced classes in ballet, tap and jazz for ages 3 through adult. It is important to us that our students start their training with a high quality, technical foundation. This provides them with the strength and confidence needed for higher levels and performance opportunities. All of our students will be invited to participate in our Winter and Summer Shows, which will consist of a Ballet Showcase and a Tap/Jazz Musical Production.">
-
-	<meta name="keywords" content="dance, citrus, heights, studio, academy, ballet, tap, jazz, sacramento, roseville, rocklin, fair oaks, orangevale">
+	
 	<meta name="robots" content="noodp,noydir">
+	<meta name="robots" content="noindex" />
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
